# Data-Communication

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Assignments/: Assignments.sln  CMakeLists.txt  README.md
Assignments/Curl/: CMakeLists.txt  Curl.cpp  Curl.vcxproj  Curl.vcxproj.filters  CurlAppController.h  README.md  pch.h
Assignments/Curl/src/: CurlAppController.cpp  CurlAppController.h  Href.cpp  Href.h
Assignments/File-Server/: CMakeLists.txt  File-Server.cpp  README.md
Assignments/File-Server/src/: AppController.cpp  AppController.h  FileServlet.cpp  FileServlet.h  HttpServer.cpp  HttpServer.h  IconServlet.cpp  IconServlet.h
Assignments/Text-Protocol/Client/: Main.cpp
Assignments/Text-Protocol/Client/src/: AppController.cpp  AppController.h
Assignments/Text-Protocol/Server/: Main.cpp
Assignments/Text-Protocol/Server/src/: AppController.cpp  AppController.h
Assignments/Text-Protocol/src/: Message.cpp  Message.h  Router.h  Socket.cpp  Socket.h
Assignments/Theory/: One.md  Three.md  Two.md
Assignments/http/: Constants.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
